--- a/CIS3285_Unit4_StudentMVC_2024/Views/Student/Create.cshtml
+++ b/CIS3285_Unit4_StudentMVC_2024/Views/Student/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CIS3285_Unit4_StudentMVC_2024.Models.StudentModel
+﻿@model CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>StudentModel</h4>
+<h4>IStudentInterface</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
