--- a/CIS3285_Unit4_StudentMVC_2024/Views/Student/Delete.cshtml
+++ b/CIS3285_Unit4_StudentMVC_2024/Views/Student/Delete.cshtml
@@ -1,10 +1,10 @@
-﻿@model CIS3285_Unit4_StudentMVC_2024.Models.StudentModel
+﻿@model CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
 
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>StudentModel</h4>
+    <h4>IStudentInterface</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
