--- a/CIS3285_Unit4_StudentMVC_2024/Views/Student/Details.cshtml
+++ b/CIS3285_Unit4_StudentMVC_2024/Views/Student/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
+﻿﻿@model CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>IStudentInterface</h4>
+    <h4>StudentModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
