--- a/CIS3285_Unit4_StudentMVC_2024/Views/Student/Index.cshtml
+++ b/CIS3285_Unit4_StudentMVC_2024/Views/Student/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface
+﻿﻿@model IEnumerable <CIS3285_Unit4_StudentMVC_2024.Models.IStudentInterface>
 
 @{
     ViewData["Title"] = "Index";
